Modified chapters 1 and 3

--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -6,7 +6,7 @@ This chapter discusses the overview of the current state of technology, research
 \section{Overview of the Current State of Technology}
 \label{sec:overview}
 
-Hearing impairment is the inability to hear, and it may affect one's development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. An extremely deaf child may find it immensely difficult to learn speech and language without auditory feedback \cite{bernstein:1988:STA}.
+Hearing impairment is the inability to hear, and it may affect one’s development when learning how to speak \cite{lasak:2014:HL}. Some people are born with hearing impairment, and some obtain it due to age, illness, trauma, and other factors. An extremely deaf child may find it immensely difficult to learn speech and language since they cannot imitate any sounds without auditory feedback \cite{bernstein:1988:STA}. This leads to children not being able to use their vocal chords even though it is properly functioning.
 
 \begin{comment}
 Throughout the years, man has tried to find ways to help the hearing-handicapped learn how to speak properly \cite{oyer:1976:CHH}. Oyer \citeyear{oyer:1976:CHH} states that there was a time when hearing-handicapped were considered unfit to hold citizenship. James Pickett, a professor of speech communication research says "I believe that large improvements in the lives of deaf persons depends on making large improvements in their speech communication" \cite{connor:1971:SDC}. Pickett also states that in the late 19th century, research began for helping the Deaf communicate \cite{connor:1971:SDC}.
@@ -14,9 +14,9 @@ Throughout the years, man has tried to find ways to help the hearing-handicapped
 One problem of a hearing-impaired student is the lack of access to speech training aids outside of therapy \cite{bernstein:1988:STA}. Extensive practice is required for the student to progress \cite{bernstein:1988:STA}.
 \end{comment}
 
-Early speech training software were implemented using a lip reading technique, wherein the systems take the user's lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
+Early speech training software were implemented using a lip reading technique, wherein the systems take the user’s lip movement as input \cite{heracleous:2010:CSA}. However, many phonemes share similar facial and lip shape (visemes) with other phonemes as well; resulting to phonemes not being discernable through visual data alone \cite{heracleous:2010:CSA}.
 
-Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of such games is a 'ball game' wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child's voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}.
+Bernstein et al. \citeyear{bernstein:1988:STA} mentions that visual information is commonly practiced to aid in speech perception. Several visual displays were designed to grasp the attention of children wherein they play games to learn. One of the games is a ’ball game’ wherein the ball changes in size depending on the loudness of the sound the child makes. The ball also can be controlled going to the hoop using the child’s voice pitch \cite{bernstein:1988:STA}. Another game is a vertical spectrum, which is visually displayed as a changing 2-dimensional shape wherein frequency was displayed on the y-axis, and amplitude---the degree of change---on the x-axis \cite{bernstein:1988:STA}. The problem with this game is that it only leaves the children to guess on whether he is actually doing right or wrong. There is no specific feedback on how to produce the right sound correctly.
 
 Currently, one way for a hearing-impaired person to learn how to speak is by planting an electronic device called a cochlear implant. It is designed to function as a cochlea, a part of the ear which receives sounds in the form of vibrations and these vibrations are sensed by hair cells. Deaf people are unable to hear because their hair cells cannot detect the vibrations as received by the cochlea due to damaged hairs cells, or they have less hair cells. Cochlear implants stimulate the cochlear nerves without going the hair cells anymore. A person with a cochlear implant may still undergo training and therapy in order to adjust to their hearing \cite{blume:2009:AE}. Once a person hears properly, it can lead to speech training and therapy in order for one to respond accordingly to different sounds.
 					
@@ -30,7 +30,11 @@ Moreover, in training hearing-impaired children, the most preferred feedback is 
 \subsection{General Objective}
 \label{sec:generalobjective}
 
+\begin{comment}
 To implement a speech training software that provides visual feedback to assist people with hearing impairment in order to learn how to speak vowel sounds.
+\end{comment}
+
+To implement a speech training software that provides scalar visual feedback by means of colour representation which assists people with hearing impairment to learn how to speak vowel sounds.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
@@ -57,3 +61,5 @@ The speech training software will run on a desktop platform, as desktop computer
 
 The thesis will assist the Deaf in learning the pronunciations of vowel sounds correctly. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training.
 The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
+
+The thesis will assist the Deaf in learning the pronunciations of vowel sounds accurately. Current speech training software in the industry only shows a graphical illustration of the user's voice input and the goal the user must achieve. This method however lacks in providing scalar feedback of the input of the user. The thesis will be providing a feedback on what sound is the user currently producing and what he/she needs to do in order to correct himself/herself. Deaf communities may make use of the software, guided by a professional speech trainer, in his or her development with regard to speech training. The thesis may serve as a basis for future implementations of Deaf speech training software which may cater not only vowels, but also consonants.
