--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -20,7 +20,7 @@ The research activities will be divided into the following phases:
 \end{enumerate}
 
 \subsection{Gathering of Data}
-The appropriate literatures--scalar feedback, visual appeal, speech training systems--are to be gathered in order to design and implement an effective speech training software. Several textbooks and journals are available in the institution where the group is studying in. The group also has to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech training software.
+The appropriate literatures---scalar feedback, visual appeal, speech training systems---are to be gathered in order to design and implement an effective speech training software. Several textbooks and journals are available in the institution where the group is studying in. The group also has to look for Deaf schools who are willing to let the researchers conduct interviews with their students for the sole purpose of creating an effective speech training software.
 
 \subsection{Research and Comparison}
 After having gathered data, the group is then tasked to research and compare different literatures and ideas. There are several ways of providing visual and scalar feedback to users. However the group should only select the more effective ways of providing visual and scalar feedback. With this, it is important to look behind the science of these visual feedback and how effective they are.
@@ -65,13 +65,13 @@ Table 3.1 shows a Gantt chart of the activities. Each bullet represents approxim
 \centering
 \caption{Timetable of Activities} \vspace{0.25em}
 \begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|} \hline
-\centering Activities (2015) & Sep & Oct & Nov & Dec & Jan & Feb & Mar \\ \hline
-Gathering of Data      & ~~~\weektwo & \weekfour &  &  &  &  &  \\ \hline
-Research and Comparison &   & ~~~\weektwo & \weekfour &  &  &  &  \\ \hline
-Implementation of the Software      &   &  & ~~~\weektwo & \weektwo~~~ &  ~~\weekthree &  &  \\ \hline
-Testing and Evaluation of the Software     &   &  &  &  & ~~~\weektwo & \weekfour &  \\ \hline
-Analysis of Results      &   &  &  &  &  &  & \weekfour \\ \hline
-Documentation & ~~~\weektwo  & \weekfour & \weekfour & \weektwo~~~ & ~~\weekthree & \weekfour & \weekfour \\ \hline
+\centering Activities (2015) & Aug & Sep & Oct & Nov & Dec & Jan & Feb & Mar & Apr & May & Jun & Jul & Aug \\ \hline
+Gathering of Data      & ~~~\weekone & \weekfour &  &  &  &  &  & & & & & \\ \hline
+Research and Comparison &   & ~~~\weektwo & \weekfour &  &  &  & & & & & &  \\ \hline
+Implementation of the Software      &   &  & ~~~\weektwo & \weektwo~~~ &  ~~\weekthree &  & & & & & &  \\ \hline
+Testing and Evaluation of the Software     &   &  &  &  & ~~~\weektwo & \weekfour & & & & & &  \\ \hline
+Analysis of Results      &   &  &  &  &  &  & \weekfour& & & & &  \\ \hline
+Documentation & ~~~\weektwo  & \weekfour & \weekfour & \weektwo~~~ & ~~\weekthree & \weekfour & \weekfour & & & & & \\ \hline
 \end{tabular}
 \label{tab:timetableactivities}
 \end{table}
