--- a/chapter_1.tex
+++ b/chapter_1.tex
@@ -34,19 +34,18 @@ Moreover, in training hearing-impaired children, the most preferred feedback is 
 To implement a speech training software that provides visual feedback to assist people with hearing impairment in order to learn how to speak vowel sounds.
 \end{comment}
 
-To implement a speech training software that provides scalar visual feedback by means of colour representation which assists people with hearing impairment to learn how to speak vowel sounds.
+To implement a feedback system that provides scalar visual feedback by means of colour representation.
 
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
 \begin{enumerate}
-\item To study how previous and current speech training programs work
-\item To find Deaf schools who may assist the proponents with the research
-\item To identify and compare different methods of visual feedback in speech training systems
+\item To find schools for the hearing-impaired who may assist the group with the testing and implementation of the research.
+\item To identify and compare different methods and design of visual feedback in speech training systems.
+\item To select the optimal colour representation to be used as visual scalar feedback.
 \item To select the optimal visual feedback method based on usability and effectiveness
-\item To review Natalie Agustin's \citeyear{agustin:2014:SOM} master's thesis, a mapping program which will be integrated into the speech training software
-\item To determine the different methods in motivating the hearing-impaired in using the speech training software
-\item To evaluate the accuracy of the speech training software's visual feedback based on the user's voice input
+\item To evaluate the accuracy of the implemented speech training software’s visual feedback.
+\item To evaluate the effectiveness of the implemented speech training software
 \end{enumerate}
 
 \section{Scope and Limitations of the Research}
@@ -55,6 +54,8 @@ To implement a speech training software that provides scalar visual feedback by 
 For the implementation of the speech training software, the master's thesis of Natalie Agustin \citeyear{agustin:2014:SOM} will be used. Agustin's program is a mapping software which receives voice input from the user and identifies the vowel sound made by the user and displays the user’s articulation---the movement of the lips, tongue, jaw, and other speech organs. Agustin's thesis will be used for the system to know which vowel the user had spoken.
 The speech training software will be written in Java, a cross-platform programming language, making the system usable by different operating systems.
 The speech training software will run on a desktop platform, as desktop computers are accessible and widely-used.
+The proponents will review only speech training software with free trials.
+The feedback system will only cater to vowel sounds, as the mapping software to be used only serves vowel sounds.
 
 \section{Significance of the Research}
 \label{sec:significance}
