--- a/chapter_2.tex
+++ b/chapter_2.tex
@@ -49,3 +49,32 @@ SpeechViewer III is a software developed by IBM to help the hearing-impaired enh
 
 \subsection{Speech Therapy 5}
 "Speech Therapy uses over 70 voice-activated video games to provide real-time reinforcement of a client's attempts to produce changes in pitch, loudness, voiced and unvoiced phonation, voicing onset, maximum phonation time, sound and vowel tracking"\cite{drspeech:1998:st5}. The software is aimed for the development of children, wherein they play interactive games. Immediate animated feedback is displayed to show how well a child performs.
+
+\subsection{Video Voice}
+Video Voice is a speech training software developed by Micro Video Corporation. It is a speech development tool which offers a wide variety of entertaining and motivating games in order for the student to learn. It provides visual feedback on pitch, volume, and vowel production.
+
+\pagebreak
+\subsection{Summary Table}
+Table 2.1 provides a summary of speech training software that were reviewed.
+\begin{table}[ht]   %t means place on top, replace with b if you want to place at the bottom
+\centering
+\caption{Table of Comparison} \vspace{0.25em}
+\begin{tabular}{|p{1.5in}|p{2in}|p{2in}|}
+ \hline
+\centering
+Name of Software & Features & Means of Visual Feedback \\ \hline
+	SpeechViewer
+		& Provides a dozen exercises for the user; clear and immediate feedback; provides animated rewards during successful responses 
+		& Visual and auditory feedback
+		\\ \hline
+	Speech Therapy 5
+		& 70 voice-activated games; real-time feedback; aids in pitch, loudness, voiced and unvoiced phonation; voicing onset; maximum phonation time; sound and vowel tracking
+		& Immediate animated feedback
+		\\ \hline
+	Video Voice
+		& Wide variety of games; immediate feedback; aids in volume, pitch, and vowel production
+		& Immediate visual feedback
+		\\ \hline
+\end{tabular}
+\label{tab:comparisontable2}
+\end{table}
