--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -36,6 +36,8 @@ To determine how effective the implemented software is, the researchers are goin
 \subsection{Analysis of Results}
 The researchers will analyze how helpful and effective the speech training software is through surveys and interviews with their testers. As mentioned in the previous subsection, the researchers will ask how usable and effective the program is and if the program is appealing and motivating.
 
+\pagebreak
+\begin{landscape}
 \section{Calendar of Activities}
 
 %Table \ref{tab:timetableactivities} shows a Gantt chart of the activities. Each bullet represents approximately one week worth of activity.
@@ -64,15 +66,26 @@ Table 3.1 shows a Gantt chart of the activities. Each bullet represents approxim
 \begin{table}[ht]   %t means place on top, replace with b if you want to place at the bottom
 \centering
 \caption{Timetable of Activities} \vspace{0.25em}
-\begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|} \hline
-\centering Activities (2015) & Aug & Sep & Oct & Nov & Dec & Jan & Feb & Mar & Apr & May & Jun & Jul & Aug \\ \hline
-Gathering of Data      & ~~~\weekone & \weekfour &  &  &  &  &  & & & & & \\ \hline
-Research and Comparison &   & ~~~\weektwo & \weekfour &  &  &  & & & & & &  \\ \hline
-Implementation of the Software      &   &  & ~~~\weektwo & \weektwo~~~ &  ~~\weekthree &  & & & & & &  \\ \hline
-Testing and Evaluation of the Software     &   &  &  &  & ~~~\weektwo & \weekfour & & & & & &  \\ \hline
-Analysis of Results      &   &  &  &  &  &  & \weekfour& & & & &  \\ \hline
-Documentation & ~~~\weektwo  & \weekfour & \weekfour & \weektwo~~~ & ~~\weekthree & \weekfour & \weekfour & & & & & \\ \hline
+\begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|} \hline
+\centering Activities (2015)				& Mar		&Apr		& May		& Jun		& Jul		& Aug		& Sep		& Oct		& Nov		& Dec			\\ \hline
+Gathering of Data							& \weekfour &\weektwo~~~&~\weekthree&			&			&			&			&			&			&				\\ \hline
+Research and Comparison						& \weekfour &\weektwo~~~&~\weekthree&			&			&			&			&			&			&				\\ \hline
+Implementation of the Software				&			&			&~~~\weektwo& \weekfour & \weekfour & \weekfour & \weekfour & \weekfour	& \weekfour	&\weekone~~~~~	\\ \hline
+Documentation								& \weekfour &\weektwo~~~&~\weekthree& \weekfour & \weekfour & \weekfour & \weekfour & \weekfour	& \weekfour	&\weekone~~~~~	\\ \hline
 \end{tabular}
-\label{tab:timetableactivities}
+\label{tab:timetableactivities2015}
 \end{table}
 
+\begin{table}[ht]   %t means place on top, replace with b if you want to place at the bottom
+\centering
+\caption{Timetable of Activities} \vspace{0.25em}
+\begin{tabular}{|p{2in}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|} \hline
+\centering Activities (2016)				& Jan		& Feb		& Mar		& Apr		 & May		 & Jun		& Jul		& Aug		\\ \hline
+Testing and Evaluation of the Software		&~~~\weektwo& \weekfour &\weekthree~~&\weektwo~~~&			 &			&			&			\\ \hline
+Analysis of Results							&			&			&			&			 &~\weektwo~~& \weekfour & \weekfour &~~~\weektwo\\ \hline
+Documentation								&~~~\weektwo& \weekfour &\weekthree~~&\weektwo~~~&~\weektwo~~& \weekfour & \weekfour &~~~\weektwo\\ \hline
+\end{tabular}
+\label{tab:timetableactivities2016}
+\end{table}
+
+\end{landscape}
