--- a/preamble.tex
+++ b/preamble.tex
@@ -35,7 +35,7 @@
 \usepackage{amsmath}           %-- American Math Society packages
 \usepackage{amsfonts}
 \usepackage{amssymb}
-
+\usepackage{pdflscape}
 
 \usepackage{graphicx}          %-- graphicx package needed for including figures in JPG or PNG format
  
